--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FireBaseEcommerce">
-        <activity android:name=".Facture_Create"></activity>
+        <activity android:name=".SingleProduct"></activity>
+        <activity android:name=".Products_List" />
+        <activity android:name=".Facture_Create" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
